# content_strategy_generation

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup_env.sh
app/: config.py  logging_config.py  main.py
app/agents/: content_generation_agent.py  content_strategy_agent.py  orchestrator.py
app/core/: __init__.py  context.py  logging.py
app/graph/: edges.py  nodes.py  state.py  workflow.py
app/llm/: client.py
app/memory/: job_store.py  session_data_store.py  session_state.py  thread_store.py  workflow_store.py
app/models/: schemas.py  session.py  workflow.py
app/observe/: __init__.py  alert_evaluator.py  logging.py
app/prompts/: __init__.py  discovery.py  generation.py  strategy.py
app/services/: boundary_evaluator.py  context_builder.py  conversation_orchestrator.py  creator_intent_router.py  engagement_analyzer.py  rag_service.py  step_executors.py  workflow_artifact_policy.py  workflow_dispatcher.py  workflow_run_manager.py  xhs_spider.py
app/v2/: __init__.py  auth.py  runtime.py
app/workers/: __init__.py  job_worker.py
docs/: testing_rules.md  testing_strategy.md
docs/changes/: 2026-05-16-frontend-scope-v1-v2-alignment.md
docs/deployment/: deployment_spec.md  vercel-local-runtime-mvp.md
docs/frontend/: README.md  brand-growth-console-demo.html  creator-workbench-design.md
docs/images/: deployment-architecture.excalidraw
docs/v1/: CHANGELOG.md  (+6 more)
experiments/: __init__.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
instructions/: 8.1_guide.md  8.2_guide.md  8.3_guide.md  8.4_guide.md  8.5_guide.md  8.6_guide.md  8.7_guide.md  phase_1_scraper_guide.md  phase_2_server_endpoints_guide.md  phase_3_workbench_ui_guide.md  phase_4_scraper_e2e_guide.md
(+275 files in other folders)
